# rust_producer-consumer

./: Cargo.toml  LICENSE  README.md
config/: .config.yaml
src/: main.rs
src/app/: consumer.rs  mod.rs  producer.rs
src/app/usecase/: mod.rs
src/app/usecase/consumer/: consumer.rs
src/app/usecase/publisher/: mod.rs  publisher.rs  subscriber.rs
src/pkg/: mod.rs
src/pkg/adapter/: mod.rs
src/pkg/adapter/mqtt/: connect.rs  mod.rs  publish.rs  subscribe.rs
src/pkg/adapter/rabbit/: connect.rs  consume.rs  mod.rs  publish.rs
src/pkg/repository/memory/: memory.rs  mod.rs
src/pkg/utils/: mod.rs
src/pkg/utils/domain/: config.rs  data.rs
src/pkg/utils/environment/: environment.rs  mod.rs
src/pkg/utils/gettime/: gettime.rs  mod.rs
src/pkg/utils/log/: log.rs  mod.rs
